--- a/Copernicus.Core.Tests/Copernicus.Core.Tests.csproj
+++ b/Copernicus.Core.Tests/Copernicus.Core.Tests.csproj
@@ -102,7 +102,11 @@
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\WindowsPrincipalHandler.cs" />
+    <Compile Include="Workflow\AndOperation.cs" />
+    <Compile Include="Workflow\GenericConstraint.cs" />
     <Compile Include="Workflow\GenericOperation.cs" />
+    <Compile Include="Workflow\OperationInvoker.cs" />
+    <Compile Include="Workflow\OrOperation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
