Worked a bit more on the workflow system.
It's a lot cleaner now, just need to get tests finished and manager in
place. Will probably move this along with the plugin system before too
long to CUL.

--- a/Copernicus.Core.Tests/Copernicus.Core.Tests.csproj
+++ b/Copernicus.Core.Tests/Copernicus.Core.Tests.csproj
@@ -102,11 +102,10 @@
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\WindowsPrincipalHandler.cs" />
-    <Compile Include="Workflow\AndOperation.cs" />
     <Compile Include="Workflow\GenericConstraint.cs" />
     <Compile Include="Workflow\GenericOperation.cs" />
     <Compile Include="Workflow\OperationInvoker.cs" />
-    <Compile Include="Workflow\OrOperation.cs" />
+    <Compile Include="Workflow\WorkflowNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
