--- a/Copernicus.Models.CRM/packages.config
+++ b/Copernicus.Models.CRM/packages.config
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CraigsUtilityLibrary" version="4.0.169-beta" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.191-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.191-beta" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl.Metadata" version="1.0.11-alpha" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="0.7.4052301-beta" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="0.7.4052301-beta" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.8.2" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
