--- a/Copernicus/packages.config
+++ b/Copernicus/packages.config
@@ -2,39 +2,39 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Bender" version="3.0.1.0" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.169-beta" targetFramework="net45" />
-  <package id="CUL.Bender" version="4.0.169-beta" targetFramework="net45" />
-  <package id="CUL.fastJSON" version="4.0.169-beta" targetFramework="net45" />
-  <package id="CUL.MiniProfiler" version="4.0.169-beta" targetFramework="net45" />
-  <package id="CUL.NLog" version="4.0.169-beta" targetFramework="net45" />
-  <package id="dotless" version="1.4.0.0" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.191-beta" targetFramework="net45" />
+  <package id="CUL.Bender" version="4.0.191-beta" targetFramework="net45" />
+  <package id="CUL.fastJSON" version="4.0.191-beta" targetFramework="net45" />
+  <package id="CUL.MiniProfiler" version="4.0.191-beta" targetFramework="net45" />
+  <package id="CUL.NLog" version="4.0.191-beta" targetFramework="net45" />
+  <package id="dotless" version="1.4.1.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
   <package id="fastJSON" version="2.1.1.0" targetFramework="net45" />
-  <package id="flexo" version="1.0.0.18" targetFramework="net45" />
-  <package id="Glimpse" version="1.8.5" targetFramework="net45" />
+  <package id="flexo" version="1.0.19.0" targetFramework="net45" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.1" targetFramework="net45" />
-  <package id="Glimpse.AspNet" version="1.9.0" targetFramework="net45" />
-  <package id="Glimpse.CUL" version="4.0.169-beta" targetFramework="net45" />
+  <package id="Glimpse.AspNet" version="1.9.1" targetFramework="net45" />
+  <package id="Glimpse.CUL" version="4.0.191-beta" targetFramework="net45" />
   <package id="Glimpse.Elmah" version="1.1.1" targetFramework="net45" />
   <package id="Glimpse.MiniProfiler" version="1.2.4" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="Glimpse.NLog" version="1.3.0" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.169-beta" targetFramework="net45" />
-  <package id="Ironman.Core.Assets.Less" version="1.0.169-beta" targetFramework="net45" />
-  <package id="Ironman.Core.Assets.Yui" version="1.0.169-beta" targetFramework="net45" />
-  <package id="Ironman.Default" version="1.0.169-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.191-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Less" version="1.0.191-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Yui" version="1.0.191-beta" targetFramework="net45" />
+  <package id="Ironman.Default" version="1.0.191-beta" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.12.0" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl.Metadata" version="1.0.11-alpha" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="0.7.4052301-beta" targetFramework="net45" />
@@ -50,11 +50,13 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="MiniProfiler" version="3.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
-  <package id="NLog" version="3.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
+  <package id="MiniProfiler" version="3.1.1.140" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.8.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
