--- a/Copernicus.Models/packages.config
+++ b/Copernicus.Models/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="CraigsUtilityLibrary" version="4.0.204-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.204-beta" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl.Metadata" version="1.0.12-alpha" targetFramework="net45" />
@@ -19,4 +22,6 @@
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="NuGet.Core" version="2.8.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
