Finishing up API mappings for projects and crm
Noticed a couple bugs that will need to be fixed in the plugin system.
Simplified project system. Now using mostly other plugins for data.
Added RazorGenerator to speed up load times a bit

--- a/Copernicus.Models.Project/Copernicus.Models.Project.csproj
+++ b/Copernicus.Models.Project/Copernicus.Models.Project.csproj
@@ -128,10 +128,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="CheckList.cs" />
-    <Compile Include="Label.cs" />
-    <Compile Include="Mappings\CardMapping.cs" />
+    <Compile Include="Action.cs" />
+    <Compile Include="Mappings\ActionMapping.cs" />
     <Compile Include="Mappings\ProjectListMapping.cs" />
     <Compile Include="Mappings\ProjectMapping.cs" />
     <Compile Include="Plugin\ProjectPlugin.cs" />
