Updated the models a bit for CRM and Project
Added Activity model.
Modified CRM and Project models

--- a/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
+++ b/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
@@ -157,12 +157,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity.cs" />
     <Compile Include="Address.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="ContactInfo.cs" />
     <Compile Include="Country.cs" />
     <Compile Include="Education.cs" />
     <Compile Include="ImportantDate.cs" />
+    <Compile Include="Mappings\ActivityMapping.cs" />
     <Compile Include="Mappings\AddressMapping.cs" />
     <Compile Include="Mappings\CompanyMapping.cs" />
     <Compile Include="Mappings\ContactInfoMapping.cs" />
