Finishing up with Project models
Added notifications.
Updated User so that it has an API endpoint (can get user name and email
but no delete or save).

--- a/Copernicus.Models.Project/Copernicus.Models.Project.csproj
+++ b/Copernicus.Models.Project/Copernicus.Models.Project.csproj
@@ -132,8 +132,10 @@
   <ItemGroup>
     <Compile Include="Action.cs" />
     <Compile Include="Mappings\ActionMapping.cs" />
+    <Compile Include="Mappings\NotificationMapping.cs" />
     <Compile Include="Mappings\ProjectListMapping.cs" />
     <Compile Include="Mappings\ProjectMapping.cs" />
+    <Compile Include="Notification.cs" />
     <Compile Include="Plugin\ProjectPlugin.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="ProjectList.cs" />
