--- a/Copernicus.Models.Project/packages.config
+++ b/Copernicus.Models.Project/packages.config
@@ -1,21 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.211-beta" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.211-beta" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.216-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.216-beta" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Metadata" version="1.0.12-alpha" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.Common" version="0.7.4091001-beta" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="0.7.4091001-beta" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0-beta1-20141031-01" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0-beta1-20141031-01" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="NuGet.Core" version="2.8.3" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.1.32-beta" targetFramework="net45" />
+  <package id="System.Reflection.Metadata" version="1.0.17-beta" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
