--- a/Copernicus/packages.config
+++ b/Copernicus/packages.config
@@ -2,11 +2,11 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Bender" version="3.0.1.0" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.211-beta" targetFramework="net452" />
-  <package id="CUL.Bender" version="4.0.211-beta" targetFramework="net452" />
-  <package id="CUL.fastJSON" version="4.0.211-beta" targetFramework="net452" />
-  <package id="CUL.MiniProfiler" version="4.0.211-beta" targetFramework="net452" />
-  <package id="CUL.NLog" version="4.0.211-beta" targetFramework="net452" />
+  <package id="CraigsUtilityLibrary" version="4.0.216-beta" targetFramework="net452" />
+  <package id="CUL.Bender" version="4.0.216-beta" targetFramework="net452" />
+  <package id="CUL.fastJSON" version="4.0.216-beta" targetFramework="net452" />
+  <package id="CUL.MiniProfiler" version="4.0.216-beta" targetFramework="net452" />
+  <package id="CUL.NLog" version="4.0.216-beta" targetFramework="net452" />
   <package id="dotless" version="1.4.1.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
@@ -15,16 +15,16 @@
   <package id="flexo" version="1.0.19.0" targetFramework="net45" />
   <package id="Glimpse" version="1.8.6" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net45" />
-  <package id="Glimpse.AspNet" version="1.9.1" targetFramework="net45" />
-  <package id="Glimpse.CUL" version="4.0.211-beta" targetFramework="net452" />
+  <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net452" />
+  <package id="Glimpse.CUL" version="4.0.216-beta" targetFramework="net452" />
   <package id="Glimpse.Elmah" version="1.1.1" targetFramework="net45" />
   <package id="Glimpse.MiniProfiler" version="1.2.4" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="Glimpse.NLog" version="1.4.0" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.211-beta" targetFramework="net452" />
-  <package id="Ironman.Core.Assets.Less" version="1.0.211-beta" targetFramework="net452" />
-  <package id="Ironman.Core.Assets.Yui" version="1.0.211-beta" targetFramework="net452" />
-  <package id="Ironman.Default" version="1.0.211-beta" targetFramework="net452" />
+  <package id="Ironman.Core" version="1.0.216-beta" targetFramework="net452" />
+  <package id="Ironman.Core.Assets.Less" version="1.0.216-beta" targetFramework="net452" />
+  <package id="Ironman.Core.Assets.Yui" version="1.0.216-beta" targetFramework="net452" />
+  <package id="Ironman.Default" version="1.0.216-beta" targetFramework="net452" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
@@ -35,10 +35,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Metadata" version="1.0.12-alpha" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.Common" version="0.7.4091001-beta" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="0.7.4091001-beta" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0-beta1-20141031-01" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0-beta1-20141031-01" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net45" />
@@ -59,6 +57,8 @@
   <package id="NuGet.Core" version="2.8.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorGenerator.Mvc" version="2.2.3" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.1.32-beta" targetFramework="net452" />
+  <package id="System.Reflection.Metadata" version="1.0.17-beta" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net452" />
